# arc-agi-3-2026

./: .gitignore  AGENTS.md  README.md  arc_game_1.py  arc_game_tools.py  main.py  pyproject.toml
data/: .gitignore
src/arc_agi_3_2026/: __init__.py
