[project]
name = "arc-agi-3-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Célien Donzé", email = "celien.donze@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "arc-agi>=0.9.7",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pydantic-ai>=1.83.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
